--- a/do-me-a-flavor/src/App.css
+++ b/do-me-a-flavor/src/App.css
@@ -54,11 +54,12 @@ button.button-start {
   padding: 2%;
 }
 
-/* headers and footers */
+/* headers and footers (shared thorugh multiple files) */
 .header {
   background-color: #2BC1CC;
   padding: 2%;
   color: white;
+  margin-bottom: 10px;
 }
 .header-buttons-con {
   display: flex;
@@ -91,8 +92,6 @@ button.button-start {
 }
 .footer-next {
   margin-left: auto; /* Pushes this item to the right */
-
-  
 }
 
 /* ingredients */
@@ -103,14 +102,12 @@ button.button-start {
   margin-left: 10px;
   color: #676767;
 }
-
 .ingreds-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-left: 2%;
   padding-right: 2%;
-
 }
 /* .ingreds-item-name {
   }
@@ -136,12 +133,25 @@ button.button-start {
 }
 
 /* flavor */
-
 /* flavor icon slider */
 
+.flavors-con {
+  padding: 2%;
+}
+.flavor-icon {
+  padding: 2%;
+}
 .slidecontainer {
   width: 100%; /* Width of the outside container */
-  background-color: #ffffffff;
+  /* background-color: #ffffffff; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+.slidecontainer-percent {
+  padding-left: 10px;
 }
 
 /* The slider itself */
@@ -150,7 +160,6 @@ button.button-start {
   appearance: none;
   width: 100%; /* Full-width */
   height: 25px; /* Specified height */
-  /* background: #d3d3d3; /* Grey background */
   outline: none; /* Remove outline */
   opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
   -webkit-transition: .2s; /* 0.2 seconds transition on hover */
@@ -168,7 +177,7 @@ button.button-start {
   width: 23px;
   height: 24px;
   border: 0;
-  /* background: url('images/icon_bitter.svg'); */
+  background: transparent;
   background-color: #ffffffff;
   cursor: pointer;
 }
@@ -177,7 +186,7 @@ button.button-start {
   width: 23px;
   height: 25px;
   border: 0;
-  /* background: url('../public/images/icon_bitter.svg'); */
+  background: transparent;
   background-color: #ffffffff;
   cursor: pointer;
 }
@@ -238,6 +247,23 @@ button.button-start {
   background: url('../public/images/icon_umami.svg');
 }
 
+/* recipeList */
+.get-recipes-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.popup-match {
+  padding-top: 10px;
+}
+.popup-button {
+  /* padding-top: 15px; */
+  margin: 10px;
+}
+.card-contents {
+  margin: 10px;
+}
+
 .popup {
   position: fixed;
   top: 0;
@@ -245,7 +271,6 @@ button.button-start {
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
-
   display: flex;
   justify-content: center;
   align-items: center;
