split app.css into multiple files. added my recipe list on ingredients page

--- a/src/App.css
+++ b/src/App.css
@@ -1,67 +1,4 @@
-/* home page */
-#title-1 {
-  font-size: 200%;
-}
-#title-2 {
-  padding: 5%;
-  font-size: 300%;
-}
-
-.card {
-  width: 100%;
-  word-wrap: break-word;
-  padding-left: 0px;
-}
-
-
-.title-con {
-  background-color: #2BC1CC;
-  text-align: center;
-  color: white;
-
-  /* min-height requires display, flex-direction, align-itmes, and justify-content */
-  min-height: 50vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.buttons-con {
-  padding: 2%;
-  text-align: center;
-}
-.buttons-con-inner {
-  padding: 3%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-}
-.buttons-con-inner > * {
-  /* for when the buttons wrap to next row */
-  flex: 1 1 auto;
-  margin: 5px;
-}
-.flavor-icons-con {
-  padding: 2%;
-}
-button.button-start {
-  padding: 5%;
-}
-.button-start-con {
-  padding: 5%;
-  margin: 10px;
-  text-align: center;
-}
-.flavor-icons-con {
-  padding: 2%;
-  text-align: center;
-  margin: 15%;
-}
-.flavor-icon {
-  padding: 2%;
-}
-
+/* app.css shared styling */
 /* headers and footers (shared thorugh multiple files) */
 .header {
   background-color: #2BC1CC;
@@ -102,198 +39,3 @@ button.button-start {
   margin-left: auto; /* Pushes this item to the right */
 }
 
-/* ingredients */
-.ingreds-con {
-  padding: 2%;
-}
-.ingred-err {
-  margin-left: 10px;
-  color: #676767;
-}
-.ingreds-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-left: 2%;
-  padding-right: 2%;
-}
-/* .ingreds-item-name {
-  }
-.ingreds-item-btn {
-} */
-.search-input-con {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.search-results-con {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-.add-rm-button {
-  background: none;
-  border: none;
-}
-.color-red {
-  color: red;
-}
-.color-green {
-  color: green;
-}
-
-/* flavor */
-/* flavor icon slider */
-
-.flavors-con {
-  padding: 2%;
-}
-.flavor-icon {
-  padding: 2%;
-}
-.slidecontainer {
-  width: 100%; /* Width of the outside container */
-  /* background-color: #ffffffff; */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-left: 2%;
-  padding-right: 2%;
-}
-.slidecontainer-percent {
-  padding-left: 10px;
-}
-
-/* The slider itself */
-.slider {
-  -webkit-appearance: none;  /* Override default CSS styles */
-  appearance: none;
-  width: 100%; /* Full-width */
-  height: 25px; /* Specified height */
-  outline: none; /* Remove outline */
-  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
-  transition: opacity .2s;
-}
-
-/* Mouse-over effects */
-.slider:hover {
-  opacity: 1; /* Fully shown on mouse-over */
-}
-
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 23px;
-  height: 24px;
-  border: 0;
-  background: transparent;
-  background-color: #ffffffff;
-  cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-  width: 23px;
-  height: 25px;
-  border: 0;
-  background: transparent;
-  background-color: #ffffffff;
-  cursor: pointer;
-}
-
-.icon_bitter::-webkit-slider-thumb {
-  background: url('../public/images/icon_bitter.svg');
-}
-
-.icon_bitter::-moz-range-thumb {
-  background: url('../public/images/icon_bitter.svg');
-}
-
-.icon_rich::-webkit-slider-thumb {
-  background: url('../public/images/icon_rich.svg');
-}
-
-.icon_rich::-moz-range-thumb {
-  background: url('../public/images/icon_rich.svg');
-}
-
-.icon_salty::-webkit-slider-thumb {
-  background: url('../public/images/icon_salty.svg');
-}
-
-.icon_salty::-moz-range-thumb {
-  background: url('../public/images/icon_salty.svg');
-}
-
-.icon_sour::-webkit-slider-thumb {
-  background: url('../public/images/icon_sour.svg');
-}
-
-.icon_sour::-moz-range-thumb {
-  background: url('../public/images/icon_sour.svg');
-}
-
-.icon_spicy::-webkit-slider-thumb {
-  background: url('../public/images/icon_spicy.svg');
-}
-
-.icon_spicy::-moz-range-thumb {
-  background: url('../public/images/icon_spicy.svg');
-}
-
-.icon_sweet::-webkit-slider-thumb {
-  background: url('../public/images/icon_sweet.svg');
-}
-
-.icon_sweet::-moz-range-thumb {
-  background: url('../public/images/icon_sweet.svg');
-}
-
-.icon_umami::-webkit-slider-thumb {
-  background: url('../public/images/icon_umami.svg');
-}
-
-.icon_umami::-moz-range-thumb {
-  background: url('../public/images/icon_umami.svg');
-}
-
-/* recipeList */
-.get-recipes-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.popup-match {
-  padding-top: 10px;
-}
-.popup-button {
-  /* padding-top: 15px; */
-  margin: 10px;
-}
-.card-contents {
-  margin: 10px;
-}
-
-.popup {
-  /* position: fixed; */
-  top: 0;
-  left: 0;
-  width: 100%;
-  /* height: 100vh; */
-  /* background-color: rgba(0, 0, 0, 0.2); */
-  display: inline-block;
-  justify-content: center;
-  align-items: center;
-}
-
-.popup-inner {
-  position: relative;
-  padding: 32px;
-  width: 100%;
-  max-width: 640px;
-  background-color: #FFF;
-}
-
-.popup-inner .close-btn {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-}
