myrecipe working in flavors; todo make it a component instead

--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,15 @@
   margin-left: auto; /* Pushes this item to the right */
 }
 
+
+/* myrecipe*/
+
+
+.myrecipe-list {
+  padding-left: 10px;
+}
+
+.myrecipe-err {
+  margin-left: 10px;
+  color: #676767;
+}
