--- a/src/pages/Flavor.css
+++ b/src/pages/Flavor.css
@@ -1,17 +1,47 @@
 /* flavor.css */
 /* flavor icon slider */
+@font-face {
+  font-family: 'Donatello';
+  src: url('../assets/Donatello.ttf') format('ttf');
+  font-weight: normal;
+  font-style: normal;
+}
 
+@font-face{
+  font-family: 'Vividly';
+  src: url('../assets/Vividly-Regular.ttf') format('ttf'),
+      url('../assets/Vividly-Regular.otf') format('otf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.header{
+  padding: 0px;
+  margin: 0px;
+  background-color: #2bc1cc;
+}
+.header-text{
+  text-align: center;
+  font-size: 54px;
+  font-family: 'Donatello', sans-serif;
+}
+
+.header-subtitle{
+  text-align: center;
+  font-family: 'Vividly', sans-serif;
+  font-size: 40px;
+  padding-bottom: 5px;
+}
 .wave-header {
+  width: 100%;
   position: relative;
-  background-color: #4ec6d3; /* match your screenshot's blue */
-  height: 200px;
   overflow: hidden;
+  background-color: #2BC1CC;
   color: white;
 }
 
 .header-content {
   padding: 40px 20px;
-  font-family: 'Cursive', sans-serif;
   font-size: 48px;
   font-weight: bold;
   text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.25);
@@ -22,6 +52,10 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  height: clamp(40px, 10vw, 80px);
+  display: block;
+  margin-bottom: -1px; 
+  margin-top: 0px;
 }
 
 
