--- a/src/pages/Ingredients.css
+++ b/src/pages/Ingredients.css
@@ -15,6 +15,27 @@
   font-style: normal;
 }
 
+@font-face{
+  font-family: 'Louis-George-Cafe-Italic';
+  src: url('../assets/Louis-George-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face{
+  font-family: 'Louis-George-Cafe-Heavy';
+  src: url('../assets/Louis-George-Italic-Heavy.ttf') format('truetype');
+  font-weight: normal;
+  font-style: oblique;
+}
+
+.nav-button{
+  padding: 10px;
+}
+
+.header-recipe{
+  padding: 10px;
+}
 .header{
   padding: 0px;
   margin: 0px;
@@ -32,16 +53,36 @@
   font-size: 40px;
   padding-bottom: 5px;
 }
+
+.searchbox {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: 'Louis-George-Cafe-Italic', sans-serif;
+  font-style: italic;
+  font-size: 20px;
+  color:#4A4A4A;
+}
+
+.searchIcon{
+  padding-left: 5px;   
+}
+
+.searchingfor{
+  font-family: 'Louis-George-Cafe-Heavy';
+  font-style: oblique;
+  color:#4A4A4A;
+}
 .wave-header {
   width: 100%;
   position: relative;
   overflow: hidden;
   background-color: #2BC1CC;
   color: white;
+  padding-top: 0px;
 }
 
 .header-content {
-  padding: 40px 20px;
   font-size: 48px;
   font-weight: bold;
   text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.25);
@@ -59,7 +100,7 @@
 }
 
 .ingreds-con {
-  padding: 2%;
+  padding: 0%;
 }
 .ingreds-item {
   display: flex;
@@ -67,6 +108,25 @@
   align-items: center;
   padding-left: 2%;
   padding-right: 2%;
+  
+}
+.ingredname{
+  font-family: 'Louis-George-Cafe-Heavy';
+  font-style: oblique;
+  font-size: 25px;
+  color:#4A4A4A;
+}
+
+.ingredListCurr{
+  font-family: 'Louis-George-Cafe-Italic';
+  font-style: italic; 
+  font-size: 20px;
+  color: #4a4a4a
+}
+.IngredientListHeader{
+  font-family: 'Louis-George-Cafe-Heavy';
+  font-style: oblique;
+  font-size: 20px;
 }
 /* .ingreds-item-name {
   }
@@ -89,4 +149,51 @@
 }
 .color-green {
   color: green;
+}
+
+.footer-buttons-con{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #2bc1cc;
+  padding: 10px 20px;
+  margin-left: 0;
+  margin-bottom: 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+
+}
+
+.ingreds-con{
+  position: relative;
+  padding-bottom: 70px
+}
+
+.footer-next{
+  display: float;
+
+}
+.footnext{
+  height: 40px;
+  width: 100px;
+  border-radius: 25px; 
+  background-color: white;
+  border: none;
+  font-family: 'Vividly', sans-serif;
+  font-size: 30px;
+  color:#2BC1CC;
+}
+
+.footback{
+  height: 40px;
+  width: 100px;
+  border-radius: 25px; 
+  background-color: white;
+  border: none;
+  font-family: 'Vividly', sans-serif;
+  font-size: 30px;
+  color:#2BC1CC;
 }
