--- a/src/pages/Ingredients.css
+++ b/src/pages/Ingredients.css
@@ -176,6 +176,30 @@
   display: float;
 
 }
+
+.modal-header{
+  font-family: 'Vividly';
+  font-size: 40px;
+}
+
+.modal-body{
+  font-family: 'Louis-George-Cafe-Italic';
+  font-style: italic;
+  font-size: 20px;
+}
+
+.modal-button{
+  display: inline-block;
+  height: 50px;
+  width: 30%;
+  border-radius: 25px; 
+  background-color: #2bc1cc;
+  border: none;
+  font-family: 'Vividly', sans-serif;
+  font-size: 30px;
+  color:white;
+}
+
 .footnext{
   height: 40px;
   width: 100px;
