--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,35 @@
 /* app.css shared styling */
 /* headers and footers (shared thorugh multiple files) */
+@font-face {
+  font-family: 'Donatello';
+  src: url('./assets/Donatello.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face{
+  font-family: 'Vividly';
+  src: url('./assets/Vividly-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face{
+  font-family: 'Louis-George-Cafe-Italic';
+  src: url('./assets/Louis-George-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face{
+  font-family: 'Louis-George-Cafe-Heavy';
+  src: url('./assets/Louis-George-Italic-Heavy.ttf') format('truetype');
+  font-weight: normal;
+  font-style: oblique;
+}
+
+
 .header {
   background-color: #2BC1CC;
   padding: 2%;
