--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,17 +1,31 @@
 /* home.css home page */
 @font-face {
   font-family: 'Donatello';
-  src: url('../assets/Donatello.ttf') format('ttf');
+  src: url('../assets/Donatello.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face{
   font-family: 'Vividly';
-  src: url('../assets/Vividly-Regular.ttf') format('ttf'),
-      url('../assets/Vividly-Regular.otf') format('otf');
+  src: url('../assets/Vividly-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+}
+
+
+@font-face{
+  font-family: 'Louis-George-Cafe-Italic';
+  src: url('../assets/Louis-George-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face{
+  font-family: 'Louis-George-Cafe-Heavy';
+  src: url('../assets/Louis-George-Italic-Heavy.ttf') format('truetype');
+  font-weight: normal;
+  font-style: oblique;
 }
 
 .homepage{
