--- a/src/pages/RecipeList.css
+++ b/src/pages/RecipeList.css
@@ -2,18 +2,18 @@
 
 @font-face {
   font-family: 'Donatello';
-  src: url('../assets/Donatello.ttf') format('ttf');
+  src: url('../assets/Donatello.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face{
   font-family: 'Vividly';
-  src: url('../assets/Vividly-Regular.ttf') format('ttf'),
-      url('../assets/Vividly-Regular.otf') format('otf');
+  src: url('../assets/Vividly-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
+
 
 @font-face{
   font-family: 'Louis-George-Cafe-Italic';
@@ -192,7 +192,7 @@
 
 .footnext{
   height: 40px;
-  width: 200px;
+  width: 80px;
   border-radius: 25px; 
   background-color: white;
   border: none;
@@ -203,7 +203,7 @@
 
 .footback{
   height: 40px;
-  width: 100%;
+  width: 80px;
   border-radius: 25px; 
   background-color: white;
   border: none;
