--- a/src/pages/Ingredients.css
+++ b/src/pages/Ingredients.css
@@ -209,6 +209,7 @@
   font-family: 'Vividly', sans-serif;
   font-size: 30px;
   color:#2BC1CC;
+  text-align: center;
 }
 
 .footback{
@@ -220,4 +221,6 @@
   font-family: 'Vividly', sans-serif;
   font-size: 30px;
   color:#2BC1CC;
+  text-align: center;
+
 }
