--- a/src/pages/Ingredients.css
+++ b/src/pages/Ingredients.css
@@ -210,6 +210,7 @@
   font-size: 30px;
   color:#2BC1CC;
   text-align: center;
+  align-items: center;
 }
 
 .footback{
@@ -222,5 +223,6 @@
   font-size: 30px;
   color:#2BC1CC;
   text-align: center;
+  align-items: center;
 
 }
